<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_test"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_glossary"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_glossary" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>
    <item
        android:title="@string/menu_help">
        <menu>
            <item
                android:id="@+id/nav_sites"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_useful" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
